worked on personal timeoff, leave summary, working on holiday

--- a/src/components/LeaveSummaryModal/LeaveSummaryModal.css
+++ b/src/components/LeaveSummaryModal/LeaveSummaryModal.css
@@ -56,3 +56,11 @@
 .sick-leave {
     color: blue;
 }
+
+.leave-summary-table .pto-leave {
+    color: green; /* or any color you prefer */
+}
+
+.employee-info .pto-leave {
+    color: green; /* or any color you prefer */
+}
