--- a/src/components/HRSharedCalendar/HRSharedCalendar.css
+++ b/src/components/HRSharedCalendar/HRSharedCalendar.css
@@ -1,4 +1,5 @@
-/* General styles for the modal overlay and container */
+
+General styles for the modal overlay and container
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -59,10 +60,10 @@
     border: none;
     font-size: 16px;
     cursor: pointer;
-    z-index: 20; /* Ensures the button is on top of the overlay */
-}
+    z-index: 20; 
+ }
 
-/* Styles for the react-big-calendar component */
+
 .rbc-calendar {
     background: #fff;
     border-radius: 8px;
@@ -100,11 +101,11 @@
 }
 
 .rbc-event.sick-leave {
-    background-color: yellow; /* Example color for sick leave */
+    background-color: yellow; 
 }
 
 .rbc-event.pending {
-    background-color: lightgrey; /* Example color for pending requests */
+    background-color: lightgrey; 
 }
 
 .rbc-day-bg + .rbc-day-bg {
@@ -136,7 +137,6 @@
     border-top: 1px solid #f5f5f5;
 }
 
-/* Remove weekends in month view */
 .rbc-month-header > :first-child,
 .rbc-month-header > :last-child {
   display: none;
@@ -155,4 +155,4 @@
 .rbc-row-content > .rbc-row > .rbc-date-cell:first-child,
 .rbc-row-content > .rbc-row > .rbc-date-cell:last-child {
   display: none;
-}
+}  
