bunch of changes

--- a/src/components/LeaveSummary/LeaveSummary.css
+++ b/src/components/LeaveSummary/LeaveSummary.css
@@ -44,3 +44,6 @@
 .leave-summary .employee-info .pto-leave {
     color: green; /* or any color you prefer */
 }
+.leave-summary .other-leave {
+    color: rgb(244, 166, 98); /* or any color you prefer */
+}
