--- a/src/components/HRSharedCalendar/HRSharedCalendar.css
+++ b/src/components/HRSharedCalendar/HRSharedCalendar.css
@@ -150,3 +150,34 @@ General styles for the modal overlay and container
 .rbc-agenda-table thead tr th:nth-child(2) {
     display: none !important;
 }
+.calendar-with-legend{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.calendar-container{
+    width:87.5%;
+}
+.legend{
+    width: 10%;
+    background-color: #f5f5f5;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    height: fit-content;
+    margin-right: 8px;
+}
+.legend h4{
+    margin-bottom: 8px;
+    text-align: center;
+}
+.legend ul{
+    list-style-type: none;
+    padding-left: 0;
+}
+.legend ul li{
+    font-size: 14px;
+    margin-bottom: 16px;
+    margin-top: 16px;
+}
