--- a/src/components/EditEmployeeModal/EditEmployeeModal.css
+++ b/src/components/EditEmployeeModal/EditEmployeeModal.css
@@ -38,9 +38,7 @@
     flex-direction: column;
 }
 
-.modal form div {
-    margin-bottom: 10px; /* Reduce margin */
-}
+
 
 .modal form label {
     font-size: 14px;
@@ -65,4 +63,39 @@
 
 .modal form button:hover {
     background-color: #0056b3;
+}
+
+.dropdown-input{
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+}
+
+.dropdown-list{
+    max-height: 200px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    z-index: 1000;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+.dropdown-list li{
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+.dropdown-list li:hover{
+    background-color: #f0f0f0;
+}
+.modal form div{
+    margin-bottom: 8px;
 }
